# c3-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml
.github/workflows/: ci.yml
c3/: __init__.py  __main__.py  agent.py  app.schema.json  baileys_bridge.js  c3.yaml  test_adapter.py
c3/apps/: CLAUDE.md
c3/apps/appedit/: CLAUDE.md  app.json
c3/apps/appedit/skills/: appedit.md
c3/apps/appgen/: CLAUDE.md  app.json
c3/apps/appgen/skills/: appgen.md
c3/apps/appstore/: CLAUDE.md  app.json
c3/apps/events/: CLAUDE.md  app.json
c3/apps/expenses/: CLAUDE.md  app.json
c3/apps/games/: CLAUDE.md  app.json
c3/apps/games/skills/: never-have-i-ever.md  polls.md  trivia.md
c3/plugins/: CLAUDE.md
c3/plugins/calendar/: CLAUDE.md  plugin.json
c3/plugins/games/: .memory_schema  CLAUDE.md  plugin.json
c3/plugins/games/skills/: 20-questions.md  hot-seat.md  interview.md  mafia.md  poll-party.md  scorekeeper.md  speed-quiz.md  story-chain.md  two-truths.md  werewolf.md  whodunit.md  would-you-rather.md
c3/plugins/mealprep/: CLAUDE.md  plugin.json
tests/: conftest.py  test_aggregator.py  test_bugfixes.py  test_channel_core.py  test_integ_access.py  test_integ_appstore.py  test_integ_config.py  test_integ_security.py  test_integ_session.py  test_integ_tools.py  test_plugin_controller.py  test_primitives.py  test_session_engine.py  test_v020.py
